tests/snapshots/tui_snapshot_test__tui_snapshots__save_dialog_txt_format.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Liv┌ Save capture ────────────────────────────────────────────────────────┐
 Cap│                                                                      │
 Vie│  Save to: /tmp/sipnab_20240615_120000.txt                            │
  # │  Dialogs: 3 (none checked, so all are saved) · Messages: 8           │atio
> [ │                                                                      │s
  [ │  Packet capture                                                      │s
  [ │      PCAP      Universal baseline (Wireshark, tcpdump, Homer)        │s
    │      PCAP-NG   Modern format with metadata and annotations           │
    │                                                                      │
    │  SIP-specific                                                        │
    │    ▸ TXT       Plain text SIP messages                               │
    │      SIPp      Replayable SIPp scenario for QA testing               │
    │                                                                      │
    │  Structured/analytics                                                │
    │      JSON      Full call detail for ELK, ClickHouse, etc.            │
    │      NDJSON    Streaming-friendly for large captures                 │
    │      CSV       Summary rows for spreadsheets and BI tools            │
    │                                                                      │
    │  Reporting                                                           │
    │      HTML      Ladder diagram page (Mermaid), no dependencies        │
    │      Markdown  Call summary for tickets and incidents                │
    │                                                                      │
    │  [Enter] Save  [Tab/⇧Tab] Format  [Esc] Cancel                       │
Ente└──────────────────────────────────────────────────────────────────────┘
