tests/snapshots/tui_snapshot_test__tui_snapshots__sdp_timeline_view.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 3 shown of 3    Autoscroll: on
 Capture filter (BPF): none
 View filter: none
┌ SDP offer/answer timeline ───────────────────────────────────────────────────┐
│  No SDP offers or answers in this call.                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Esc Back  F1 Help  ↑↓ Scroll  PgUp/Dn Page
