tests/snapshots/tui_snapshot_test__tui_snapshots__statistics_view.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 3 shown of 3    Autoscroll: o
 Capture filter (BPF): none
 View filter: none
┌ Statistics ──────────────────────────────────────────────┐
│Dialogs:           3                                      │
│Active dialogs:    1                                      │
│Calls in progress: 1                                      │
│Total messages:    8                                      │
│RTP streams:       0                                      │
│Orphaned streams:  0                                      │
│                                                          │
│Dialog states:                                            │
│  Completed        1                                      │
│  Failed           1                                      │
│  InCall           1                                      │
│                                                          │
│Method distribution:                                      │
│  INVITE           3                                      │
└──────────────────────────────────────────────────────────┘
Esc Back  F1 Help  ↑↓ Scroll  PgUp/Dn Page
