tests/snapshots/tui_snapshot_test__tui_snapshots__statistics_view_empty.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 0 shown of 0    Autoscroll: o
 Capture filter (BPF): none
 View filter: none
┌ Statistics ──────────────────────────────────────────────┐
│Dialogs:           0                                      │
│Active dialogs:    0                                      │
│Calls in progress: 0                                      │
│Total messages:    0                                      │
│RTP streams:       0                                      │
│Orphaned streams:  0                                      │
│                                                          │
│Press Esc to return.                                      │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
Esc Back  F1 Help  ↑↓ Scroll  PgUp/Dn Page
